src/static/common/css/common.css
.static-alert {
  position: relative;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
}

.static-alert-heading {
  color: inherit;
}

.static-alert-link {
  font-weight: 700;
}

.static-alert-primary {
  color: #004085;
  background-color: #cce5ff;
  border-color: #b8daff;
}

.static-alert-primary hr {
  border-top-color: #9fcdff;
}

.static-alert-primary .static-alert-link {
  color: #002752;
}

.static-alert-secondary {
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #d6d8db;
}

.static-alert-secondary hr {
  border-top-color: #c8cbcf;
}

.static-alert-secondary .static-alert-link {
  color: #202326;
}

.alert-success {
  color: #155724;
  background-color: #d4edda;
  border-color: #c3e6cb;
}

.static-alert-success hr {
  border-top-color: #b1dfbb;
}

.static-alert-success .static-alert-link {
  color: #0b2e13;
}

.static-alert-info {
  color: #0c5460;
  background-color: #d1ecf1;
  border-color: #bee5eb;
}

.static-alert-info hr {
  border-top-color: #abdde5;
}

.static-alert-info .static-alert-link {
  color: #062c33;
}

.static-alert-warning {
  color: #856404;
  background-color: #fff3cd;
  border-color: #ffeeba;
}

.static-alert-warning hr {
  border-top-color: #ffe8a1;
}

.static-alert-warning .static-alert-link {
  color: #533f03;
}

.static-alert-danger {
  color: #721c24;
  background-color: #f8d7da;
  border-color: #f5c6cb;
}

.static-alert-danger hr {
  border-top-color: #f1b0b7;
}

.static-alert-danger .static-alert-link {
  color: #491217;
}

.static-alert-light {
  color: #818182;
  background-color: #fefefe;
  border-color: #fdfdfe;
}

.static-alert-light hr {
  border-top-color: #ececf6;
}

.static-alert-light .static-alert-link {
  color: #686868;
}

.static-alert-dark {
  color: #1b1e21;
  background-color: #d6d8d9;
  border-color: #c6c8ca;
}

.static-alert-dark hr {
  border-top-color: #b9bbbe;
}

.static-alert-dark .static-alert-link {
  color: #040505;
}

/* Glossing */
ol {
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

ol ol {
    margin-block-start: 0px;
    margin-block-end: 0px;
}

ol.gloss-sentence {
    display: inline !important;
    padding: 0;
    margin: 0;
    list-style: none;
}

.gloss-item {
    overflow: auto;
}

.gloss-sentence li {
    padding-left: 4px !important;
    padding-bottom: 2px;

}

.gloss-sentence ol {
    list-style: none !important;
}

.gloss-sentence img {
    width: auto !important;
    padding-top: 5px;
}

ol.gloss-word {
    padding-left: 0px !important;
    padding-right: .5em !important;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    margin-bottom: 2px !important;
    background: white !important;
    display: inline-block !important;
    margin-inline-start: 0 !important;
}

.gloss-first {
  padding-left: 0 !important;
}

.gloss-header {
    float: left;
    display: flex;
    min-width: 40px;
}

.gloss-wrapper {
    overflow: auto;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 0;
}

.underline {
    text-decoration: underline;
}

.monospace {
    font-family: monospace;
    font-size: 13px;
}

.strikethrough {
    text-decoration: line-through;
}

.list-simple li {
    list-style-type: none !important;
}

.no-top-margin {
    margin-top: 0;
}

.table-left {
    text-align: left;
}

.table-right {
    text-align: right;
}

.table-center {
    text-align: center;
}

.table-top {
    vertical-align: top;
}

.table-bottom {
    vertical-align: bottom;
}

.table-middle {
    vertical-align: middle;
}

article .list-ord {
    list-style-type: decimal;
}
article .list-unord {
    list-style-type: disc;
}
article .list-alphalower {
    list-style-type: lower-alpha;
}
article .list-alphaupper {
    list-style-type: upper-alpha;
}
article .list-romanlower {
    list-style-type: lower-roman;
}
article .list-romanupper {
    list-style-type: upper-roman;
}
.no-list-type {
    list-style-type: none !important;
}
.no-list-type:first-child p {
    display: inline;
}
.jats-list-type {
    margin-left: -1.20rem;
}
.jats-addr {
    line-height: 18px;
}
.jats-addr-institution {
    display: block;
}
.jats-addr-line {
    display: block;
}
.jats-addr-line-other {
    display: block;
}

.fig-caption {
    background: #f0f0f0;
    padding: 15px;
    margin-bottom: 15px;
}

.table-caption {
    background: #f0f0f0;
    padding: 15px;
    margin-top: 15px;
}

/* Styling for skip to main content link */
.skip-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 0;
    overflow: hidden;
}

.skip-to-content,
.skip-to-nav {
    position: absolute;
    left: -999px;
}

.skip-to-content:focus,
.skip-to-nav:focus {
    position: relative;
    left: 0;
    margin-block-start: 10px;
    margin-block-end: 10px;
}

.skip-container:focus-within {
    height: auto;
    overflow: visible;
}

a.twitter-x{
  color: black;
  text-decoration: none;
  font-size: large;
  font-weight: bold;
  line-height: 1.25;
}

.list-inline {
    list-style: none;
    margin: 0;
    padding: 0;
}
/* Remove specific OLH-theme list styling */
#content aside ul.list-inline li:before {
  content: "";
  height: 0;
  width: 0;
}

.list-inline li {
  display: inline;
}

.list-inline li:not(:first-child) {
  margin-left: 0.3rem;
}

.comma-sep li:not(:last-child)::after {
  content: ",";
}

.comma-and-sep li:not(:last-child):not(:nth-last-child(2))::after,
.comma-ampersand-sep li:not(:last-child):not(:nth-last-child(2))::after {
  content: ",";
}

.comma-and-sep li:nth-last-child(2)::after {
    content: " and";
}

.comma-ampersand-sep li:nth-last-child(2)::after {
    content: " &";
}

.bar-sep li:not(:last-child)::after {
    content: " | ";
}

.list-no-bullet{
    list-style: none;
    margin: 0;
    padding: 0;
}
/* Remove specific OLH-theme list styling */
#content aside ul.list-no-bullet li:before {
  content: "";
  height: 0;
  width: 0;
}
#content aside ul.list-no-bullet li {
  margin-bottom: 4px;
}

